server/compilers/goLiteJS/src/test/ml2/invalid/decl8.go
// function used before declared
package main

func main() {
    f()
}

func f() {}
